providers/eks/main.tf

locals {
  k8s_context = "aws-${var.cluster_name}"
}

// EKS modules modifies a configmap with auth info
# provider "kubernetes" {
#   load_config_file = true
#   version          = "~> 1.11"
#   config_path      = var.k8s_kubeconfig
#   config_context   = local.k8s_context
# }

data "aws_eks_cluster" "cluster" {
  name = module.eks.cluster_id
}

data "aws_eks_cluster_auth" "cluster" {
  name = module.eks.cluster_id
}

data "aws_availability_zones" "available" {
}

resource "aws_security_group" "worker_group_mgmt_one" {
  name_prefix = "worker_group_mgmt_one"
  vpc_id      = module.aws_vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
    ]
  }
}

resource "aws_security_group" "all_worker_mgmt" {
  name_prefix = "all_worker_management"
  vpc_id      = module.aws_vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
      "172.16.0.0/12",
    ]
  }
}

module "aws_vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "2.6.0"

  name                 = "${var.cluster_name}-vpc"
  cidr                 = "10.0.0.0/16"
  azs                  = data.aws_availability_zones.available.names
  private_subnets      = ["10.0.1.0/24", "10.0.2.0/24", "10.0.3.0/24"]
  public_subnets       = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]
  enable_nat_gateway   = true
  single_nat_gateway   = true
  enable_dns_hostnames = true

  public_subnet_tags = {
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
    "kubernetes.io/role/elb"                    = "1"
  }

  private_subnet_tags = {
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
    "kubernetes.io/role/internal-elb"           = "1"
  }
}

module "eks" {
  source           = "terraform-aws-modules/eks/aws"
  cluster_name     = var.cluster_name
  subnets          = module.aws_vpc.private_subnets
  cluster_version  = var.k8s_version
  write_kubeconfig = false
  vpc_id           = module.aws_vpc.vpc_id
  manage_aws_auth  = var.manage_aws_auth

  node_groups_defaults = {
    ami_type  = "AL2_x86_64"
    disk_size = 50
  }
  node_groups = {
    nodepool1 = {
      desired_capacity = var.worker_node_count
      max_capacity     = 10
      min_capacity     = 1
      instance_types = [ var.worker_node_type ]
    }
  }

  # worker_groups = [
  #   {
  #     name                          = "worker-group-1"
  #     instance_type                 = var.worker_node_type
  #     additional_userdata           = "echo foo bar"
  #     asg_desired_capacity          = var.worker_node_count
  #     additional_security_group_ids = [aws_security_group.worker_group_mgmt_one.id]
  #     root_volume_type              = "gp2"
  #   }
  # ]
  # worker_additional_security_group_ids = [aws_security_group.all_worker_mgmt.id]

  map_roles                            = var.map_roles
  map_users                            = var.map_users
  map_accounts                         = var.map_accounts
}

resource "null_resource" "configure_kubeconfig" {
  provisioner "local-exec" {
    command = "aws eks --region ${var.region} update-kubeconfig --name ${module.eks.cluster_id} --alias ${local.k8s_context}"
    environment = {
      KUBECONFIG  = var.k8s_kubeconfig
      AWS_PROFILE = var.aws_profile
    }
  }
}
